Revision history for Perl extension Module::Build.

0.2808_01 - Wed Oct 24 11:51:25 2007

 - All .pm files in the Module-Build distribution (except for
   M::B::Version.pm, which is kind of tied to version.pm) now have the
   same $VERSION number explicitly specified.

 - When checking prerequisites, the required version of perl is now
   checked before we start finding the $VERSION declaration of the
   distribution, which results in much more intuitive error messages
   e.g. if the author is using 5.6-isms in their declaration but the
   user doesn't have 5.6. [Slaven Rezic]

 - Added 'artistic_2' license, corrected 'lgpl' license url (bug #29783)
   [David Thomas]

 - VMS find_perl_interpreter() is just $^X (bug #29810) [Craig A. Berry]

 - Some large VMS fixes, mostly having to do with the non-case-
   preserving nature of most VMS filesystems, but also correcting for
   illegal characters in VMS file specs. [John E. Malmberg and Craig
   A. Berry]

 - Fixed the _detildefy() method on VMS. [John E. Malmberg and Craig
   A. Berry]

 - We now use a much more reliable method when Data::Dumper-ing saved
   state data. [Yves]

 - When a module had 0.000 as its version, a few places in the code
   thought the module had no version at all.  This is now
   fixed. [Andrew "Zefram" Main]

 - When finding the default set of script_files, we now compute them
   as relative paths, not absolute. [Spotted by Curtis "Ovid" Poe]

 - Got rid of a call to eliminate_macros, which isn't needed in
   Module::Build since there is no external make utility involved.
   Override expand_test_dir to make up for the fact that the
   home-grown glob() returns absolute, not relative, paths. [Craig
   A. Berry]

 - Fixed a catdir() that needed to be catfile() in the .packlist
   creation code. [John E. Malmberg]

 - If a *.PL file ended abnormally during the build, processing should
   have stopped, but it didn't.  Fixed. [Matthew Cast and David
   Golden]
